JDK11にあわせて修正